Fix: add overflow control to New Arrivals section

--- a/css/new-arrivals.css
+++ b/css/new-arrivals.css
@@ -3,6 +3,7 @@
   max-width: 1400px;
   margin: 80px auto;
   padding: 0 100px;
+  overflow: hidden;
 }
 
 .new-arrivals-header {
@@ -41,7 +42,7 @@
 
 .new-arrivals-swiper {
   position: relative;
-  overflow: visible;
+  overflow: hidden;
   margin-bottom: 30px;
 }
 
